# herlihy-shavit

./: README.md
1/: exercises.md
2/: exercises.tex
3/: exercises.tex
src/1/philosophers/: Cargo.toml
src/1/philosophers/src/: README.md  basic.rs  lib.rs  main.rs
