[package]
name = "philosophers"
version = "0.1.0"
authors = ["Max Weiss <30f0fn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
try-lock = "0.2.2"

[lib]
name = "philosophers_lib"
path = "src/lib.rs"